<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"APKUpdater"</string>
    <string name="app_description_html"><![CDATA[<html><body style=\"text-align:justify\"><p>APKUpdater is a tool that simplifies the process of finding updates for your installed apps. It will provide functionality similar to an app store without having to install the associated spyware that comes with it. This is a very useful app for those who want to run Android without an app store.</p><p>Features:</p><ul><li>Get updates from multiple sources</li><li>Schedule background checks</li><li>Supports Android 2.3 to 8</li><li>Ignore list of apps to not check for updates</li><li>Modern material design with multi theme support</li><li>Display notifications when updates are found</li><li>Search for new apps to install</li></ul><p>Used libraries:</p><ul><li><a href="https://github.com/androidannotations/androidannotations">AndroidAnnotations</a></li><li><a href="https://github.com/jhy/jsoup">Jsoup</a></li><li><a href="https://github.com/square/otto">Otto</a></li><li><a href="https://github.com/google/gson">Gson</a></li><li><a href="https://github.com/square/okhttp">OkHttp</a></li><li><a href="https://github.com/yeriomin/play-store-api">play-store-api</a></li></ul><p>Update sources:</p><ul><li><a href="http://apkmirror.com">APKMirror</a></li><li><a href="https://play.google.com">Google Play</a></li><li><a href="https://apkpure.com">APKPure</a></li><li><a href="http://en.uptodown.com/">Uptodown</a></li></ul><p>Copyright &copy; 2017 Rumboalla. Licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3</a>.</p></body></html>]]></string>
    <string name="action_settings">"Settings"</string>
    <string name="action_log">"Log"</string>
    <string name="action_check_for_updates">"Check for updates"</string>
    <string name="tab_installed">"Installed"</string>
    <string name="tab_updates">"Updates"</string>
    <string name="tab_search">"Search"</string>
    <string name="tab_about">"About"</string>
    <string name="notification_update_title">"Checking for updates"</string>
    <string name="notification_update_content">"$1/$2"</string>
    <string name="notification_update_title_finished">"Finished checking for updates"</string>
    <string name="notification_update_content_finished">"Found $1 update(s)"</string>
    <string name="notification_update_title_failed">"Checking for updates failed"</string>
    <string name="already_updating">"Already checking for updates."</string>
    <string name="update_finished">"Checking for updates finished."</string>
    <string name="update_finished_with_errors">"Checking for updates finished with $1 error(s)."</string>
    <string name="update_failed">"Checking for updates failed with exception $1."</string>
    <string name="update_no_sources">"At least one source must be selected."</string>
    <string name="preferences_general_category">"General settings"</string>
    <string name="preferences_filter_category">"Filter settings"</string>
    <string name="preferences_sources_category">"Update sources"</string>
    <string name="preferences_play_category">"Google Play Settings"</string>
    <string name="preferences_general_skip_experimental_title">"Exclude experimental builds"</string>
    <string name="preferences_general_skip_experimental_summary">"This will try to exclude experimental builds (alpha, beta) from the updates."</string>
    <string name="preferences_general_self_update_title">"Self update check on startup"</string>
    <string name="preferences_general_self_update_summary">"The app will check for updates of itself on startup. If an update is found, a notification will be displayed and clicking on the notification will update the app."</string>
    <string name="preferences_general_startup_update_title" translatable="false">"Check for updates on startup"</string>
    <string name="preferences_general_startup_update_summary" translatable="false">"The app will check for updates of all apps on startup."</string>
    <string name="preferences_general_disable_animations_title">"Disable animations"</string>
    <string name="preferences_general_disable_animations_summary">"This will disable all animations and transitions."</string>
    <string name="preferences_general_skip_architecture_title">"Exclude other architectures"</string>
    <string name="preferences_general_skip_architecture_summary">"This will try to exclude apps that are not compatible with your architecture. Only works with APKMIrror."</string>
    <string name="preferences_general_skip_minapi_title">"Exclude incompatible API level"</string>
    <string name="preferences_general_skip_minapi_summary">"This will try to exclude apps that are not compatible with your Android version. Only works with APKMirror."</string>
    <string name="preferences_general_exclude_system_apps_title">"Exclude system apps"</string>
    <string name="preferences_general_exclude_system_apps_summary">"This will exclude system apps from the updates."</string>
    <string name="preferences_general_exclude_disabled_apps_title">"Exclude disabled apps"</string>
    <string name="preferences_general_exclude_disabled_apps_summary">"This will exclude disabled apps from the updates."</string>
    <string name="preferences_general_ignorelist_title">"App ignore list"</string>
    <string name="preferences_general_ignorelist_summary">"This will exclude apps from the update check."</string>
    <string name="preferences_general_ignorelist_value">"com.google.android.gms,com.google.android.gsf,com.android.vending"</string>
    <string name="preferences_general_notification_title">"Notifications"</string>
    <string name="preferences_general_theme_title">"Theme"</string>
    <string name="preferences_general_alarm_title">"Check for updates"</string>
    <string name="preferences_general_num_threads_title">"Number of threads"</string>
    <string name="preferences_general_use_apkmirror_title">"Updates from APKMirror"</string>
    <string name="preferences_general_use_apkmirror_summary">"This will check for updates on APKMirror."</string>
    <string name="preferences_general_use_play_title">"Updates from Google Play"</string>
    <string name="preferences_general_use_play_summary">"This will check for updates on Google Play."</string>
    <string name="preferences_general_use_uptodown_title">"Updates from Uptodown"</string>
    <string name="preferences_general_use_uptodown_summary">"This will check for updates on Uptodown. Slow, needs many requests."</string>
    <string name="preferences_general_use_apkpure_title">"Updates from APKPure"</string>
    <string name="preferences_general_use_apkpure_summary">"This will check for updates on APKPure.com. Needs 2 requests per app, so it's slower."</string>
    <string name="preferences_general_wifi_only_title">"Wi-Fi only"</string>
    <string name="preferences_general_wifi_only_summary">"Only check for updates when connected to a Wi-Fi network."</string>
    <string name="preferences_general_update_hour_title">"Update hour"</string>
    <string name="preferences_play_root_install_title">"Root install"</string>
    <string name="preferences_play_root_install_summary">"Install apps in the background using root. NEEDS ROOT."</string>
    <string name="preferences_play_automatic_install_title">"Automatic update installation"</string>
    <string name="preferences_play_automatic_install_summary">"All updates will be installed automatically. NEEDS ROOT."</string>
    <string name="notification_never">"Never"</string>
    <string name="notification_always">"Always"</string>
    <string name="notification_background">"Background"</string>
    <string name="notification_if_at_least_1">"If updates are available"</string>
    <string name="alarm_never">"Never"</string>
    <string name="alarm_daily">"Daily"</string>
    <string name="alarm_weekly">"Weekly"</string>
    <string name="content_description_app_icon">"App Icon"</string>
    <string name="update_check_failed_no_internet">"Checking for updates failed: No internet connection."</string>
    <string name="update_check_failed_no_wifi">"Checking for updates failed: No Wi-Fi."</string>
    <string name="action_ignore_app">"IGNORE"</string>
    <string name="action_unignore_app">"UNIGNORE"</string>
    <string name="action_play">"INSTALL"</string>
    <string name="action_installed">"INSTALLED"</string>
    <string name="install_success">"App was successfully installed!"</string>
    <string name="install_failure">"Error installing app!"</string>
    <string name="selfupdate_update">"Update %s"</string>
    <string name="selfupdate_click_to_install">"Click to install"</string>
    <string name="no_new_updates">"No new updates were found"</string>
    <string name="automatic_installer_title">"Automatic Installer"</string>
    <string name="automatic_installer_progress_title">"Automatic Installer %1$d/%2$d"</string>
    <string name="automatic_installing">"Installing %s"</string>
    <string name="automatic_error">"Error installing. Check log."</string>
    <string name="automatic_successfully_installed">"Successfully installed %d apps: "</string>
    <string name="automatic_failed_to_install">"Failed to install %d apps: "</string>
    <string name="preferences_play_own_account_title">"Use own Google Account"</string>
    <string name="preferences_play_own_account_summary">"Use your own Google account instead of a shared account."</string>
    <string name="get_token_error">"There was an error attempting to get the token."</string>
    <string name="get_token_launch_url">"Launching two factor url."</string>
    <string name="get_token_get_token">"GET TOKEN"</string>
    <string name="get_token_cancel">"CANCEL"</string>
    <string name="get_token_help">"HELP"</string>
    <string name="snackbar_close">"CLOSE"</string>
    <string name="root_not_available">Root not available.</string>
    <string name="showTestVersions">Experimental Builds</string>
    <string name="showSystemApps">System Apps</string>
    <string name="showDeactivated">Disabled Apps</string>
    <string name="showincompatibleArchitecture">Incompatible Architectures</string>
    <string name="showincompatibleApi">Incompatible APIs</string>
    <string name="tab_filter">Filter</string>
</resources>